--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link href="img/logo/logo.png" rel="icon">
-  <title>RuangAdmin - Dashboard</title>
+  <title>OnlineBusiness - Dashboard</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
         <div class="sidebar-brand-icon">
           <img src="img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">RuangAdmin</div>
+        <div class="sidebar-brand-text mx-3">OnlineBusiness</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
@@ -526,7 +526,7 @@
                       </tr>
                       <tr>
                         <td><a href="#">RA5324</a></td>
-                        <td>Jaenab Bajigur</td>
+                        <td>Shova</td>
                         <td>Gundam 90' Edition</td>
                         <td><span class="badge badge-warning">Shipping</span></td>
                         <td><a href="#" class="btn btn-sm btn-primary">Detail</a></td>
@@ -547,7 +547,7 @@
                       </tr>
                       <tr>
                         <td><a href="#">RA1998</a></td>
-                        <td>Udin Cilok</td>
+                        <td>Arshi Khanom</td>
                         <td>Baby Powder</td>
                         <td><span class="badge badge-success">Delivered</span></td>
                         <td><a href="#" class="btn btn-sm btn-primary">Detail</a></td>
